unpackaged/main/default/objects/Partner__c/fields/Adaptivity_adaptive_presentation__c.field-meta.xml
<CustomField>
    <fullName>Adaptivity_adaptive_presentation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adaptivity adaptive presentation</label>
    <type>Checkbox</type>
</CustomField>