unpackaged/main/default/objects/Partner__c/fields/Adaptivity_affective_state__c.field-meta.xml
<CustomField>
    <fullName>Adaptivity_affective_state__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adaptivity affective state</label>
    <type>Checkbox</type>
</CustomField>