unpackaged/main/default/objects/Partner__c/fields/Adaptivity_instructor_control__c.field-meta.xml
<CustomField>
    <fullName>Adaptivity_instructor_control__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adaptivity instructor control</label>
    <type>Checkbox</type>
</CustomField>