unpackaged/main/default/objects/Partner__c/fields/Adaptivity_quantitative_randomization__c.field-meta.xml
<CustomField>
    <fullName>Adaptivity_quantitative_randomization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adaptivity quantitative randomization</label>
    <type>Checkbox</type>
</CustomField>