unpackaged/main/default/objects/Partner__c/fields/Admin_realtime_progress__c.field-meta.xml
<CustomField>
    <fullName>Admin_realtime_progress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admin realtime progress</label>
    <type>Checkbox</type>
</CustomField>