unpackaged/main/default/objects/Partner__c/fields/Admin_shared_students__c.field-meta.xml
<CustomField>
    <fullName>Admin_shared_students__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admin shared students</label>
    <type>Checkbox</type>
</CustomField>