unpackaged/main/default/objects/Partner__c/fields/Admin_Syllabus__c.field-meta.xml
<CustomField>
    <fullName>Admin_Syllabus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admin Syllabus</label>
    <type>Checkbox</type>
</CustomField>