unpackaged/main/default/objects/Partner__c/fields/Affordability_Cost__c.field-meta.xml
<CustomField>
    <fullName>Affordability_Cost__c</fullName>
    <label>Affordability Cost</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Costs</valueSetName>
    </valueSet>
</CustomField>