unpackaged/main/default/objects/Partner__c/fields/Affordability_Institutional__c.field-meta.xml
<CustomField>
    <fullName>Affordability_Institutional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Affordability Institutional</label>
    <type>Checkbox</type>
</CustomField>