unpackaged/main/default/objects/Partner__c/fields/Assignment_multiple_quantitative__c.field-meta.xml
<CustomField>
    <fullName>Assignment_multiple_quantitative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assignment multiple quantitative</label>
    <type>Checkbox</type>
</CustomField>