unpackaged/main/default/objects/Partner__c/fields/Assignment_pretest__c.field-meta.xml
<CustomField>
    <fullName>Assignment_pretest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assignment pretest</label>
    <type>Checkbox</type>
</CustomField>