unpackaged/main/default/objects/Partner__c/fields/Assignment_summative_assessments__c.field-meta.xml
<CustomField>
    <fullName>Assignment_summative_assessments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assignment summative assessments</label>
    <type>Checkbox</type>
</CustomField>