unpackaged/main/default/objects/Partner__c/fields/Autonomy_on_demand_extras__c.field-meta.xml
<CustomField>
    <fullName>Autonomy_on_demand_extras__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autonomy on demand extras</label>
    <type>Checkbox</type>
</CustomField>