unpackaged/main/default/objects/Partner__c/fields/Collaboration_peer_interaction__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_peer_interaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collaboration peer interaction</label>
    <type>Checkbox</type>
</CustomField>