unpackaged/main/default/objects/Partner__c/fields/Customization_content_repository__c.field-meta.xml
<CustomField>
    <fullName>Customization_content_repository__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customization content repository</label>
    <type>Checkbox</type>
</CustomField>