unpackaged/main/default/objects/Partner__c/fields/Customization_reorder_content__c.field-meta.xml
<CustomField>
    <fullName>Customization_reorder_content__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customization reorder content</label>
    <type>Checkbox</type>
</CustomField>