unpackaged/main/default/objects/Partner__c/fields/Customization_reorder_learning_outcomes__c.field-meta.xml
<CustomField>
    <fullName>Customization_reorder_learning_outcomes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customization reorder learning outcomes</label>
    <type>Checkbox</type>
</CustomField>