unpackaged/main/default/objects/Partner__c/fields/Equity_configure__c.field-meta.xml
<CustomField>
    <fullName>Equity_configure__c</fullName>
    <label>Equity configure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Equity_configure</valueSetName>
    </valueSet>
</CustomField>