unpackaged/main/default/objects/Partner__c/fields/Equity_data__c.field-meta.xml
<CustomField>
    <fullName>Equity_data__c</fullName>
    <label>Equity data</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Equity_data</valueSetName>
    </valueSet>
</CustomField>