unpackaged/main/default/objects/Partner__c/fields/Equity_Rating__c.field-meta.xml
<CustomField>
    <fullName>Equity_Rating__c</fullName>
    <formula>IF ( Equity_Score__c &gt; 14, "Best only", IF( Equity_Score__c  &gt; 8, "Good or best", "Needs Improvement"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equity Rating</label>
    <type>Text</type>
</CustomField>