unpackaged/main/default/objects/Partner__c/fields/Equity_relevant__c.field-meta.xml
<CustomField>
    <fullName>Equity_relevant__c</fullName>
    <label>Equity relevant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Equity_relevant</valueSetName>
    </valueSet>
</CustomField>