unpackaged/main/default/objects/Partner__c/fields/Equity_research__c.field-meta.xml
<CustomField>
    <fullName>Equity_research__c</fullName>
    <label>Equity research</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Equity_research</valueSetName>
    </valueSet>
</CustomField>