unpackaged/main/default/objects/Partner__c/fields/Equity_stories__c.field-meta.xml
<CustomField>
    <fullName>Equity_stories__c</fullName>
    <label>Equity stories</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Equity_stories</valueSetName>
    </valueSet>
</CustomField>