unpackaged/main/default/objects/Partner__c/fields/Feedback_early_warning__c.field-meta.xml
<CustomField>
    <fullName>Feedback_early_warning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feedback early warning</label>
    <type>Checkbox</type>
</CustomField>