unpackaged/main/default/objects/Partner__c/fields/Feedback_individual_and_group__c.field-meta.xml
<CustomField>
    <fullName>Feedback_individual_and_group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feedback individual and group</label>
    <type>Checkbox</type>
</CustomField>