unpackaged/main/default/objects/Partner__c/fields/Feedback_knowledge_gaps__c.field-meta.xml
<CustomField>
    <fullName>Feedback_knowledge_gaps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feedback knowledge gaps</label>
    <type>Checkbox</type>
</CustomField>