unpackaged/main/default/objects/Partner__c/fields/Feedback_learner_progress_tasks__c.field-meta.xml
<CustomField>
    <fullName>Feedback_learner_progress_tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feedback learner progress tasks</label>
    <type>Checkbox</type>
</CustomField>