unpackaged/main/default/objects/Partner__c/fields/Feedback_multipart__c.field-meta.xml
<CustomField>
    <fullName>Feedback_multipart__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feedback multipart</label>
    <type>Checkbox</type>
</CustomField>