unpackaged/main/default/objects/Partner__c/fields/Grading_class_and_student_level__c.field-meta.xml
<CustomField>
    <fullName>Grading_class_and_student_level__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grading class and student level</label>
    <type>Checkbox</type>
</CustomField>