unpackaged/main/default/objects/Partner__c/fields/Grading_learning_portfolio__c.field-meta.xml
<CustomField>
    <fullName>Grading_learning_portfolio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grading learning portfolio</label>
    <type>Checkbox</type>
</CustomField>