unpackaged/main/default/objects/Partner__c/fields/Grading_rubric_based__c.field-meta.xml
<CustomField>
    <fullName>Grading_rubric_based__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grading rubric based</label>
    <type>Checkbox</type>
</CustomField>