unpackaged/main/default/objects/Partner__c/fields/Instructional_level_higher_ed__c.field-meta.xml
<CustomField>
    <fullName>Instructional_level_higher_ed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Instructional level higher ed</label>
    <type>Checkbox</type>
</CustomField>