unpackaged/main/default/objects/Partner__c/fields/Instructional_level_K12__c.field-meta.xml
<CustomField>
    <fullName>Instructional_level_K12__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Instructional level K12</label>
    <type>Checkbox</type>
</CustomField>