unpackaged/main/default/objects/Partner__c/fields/Interactivity_different_representations__c.field-meta.xml
<CustomField>
    <fullName>Interactivity_different_representations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interactivity different representations</label>
    <type>Checkbox</type>
</CustomField>