unpackaged/main/default/objects/Partner__c/fields/Interactivity_gaming__c.field-meta.xml
<CustomField>
    <fullName>Interactivity_gaming__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interactivity gaming</label>
    <type>Checkbox</type>
</CustomField>