unpackaged/main/default/objects/Partner__c/fields/Interactivity_previous_knowledge__c.field-meta.xml
<CustomField>
    <fullName>Interactivity_previous_knowledge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interactivity previous knowledge</label>
    <type>Checkbox</type>
</CustomField>