unpackaged/main/default/objects/Partner__c/fields/Interactivity_simulations__c.field-meta.xml
<CustomField>
    <fullName>Interactivity_simulations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interactivity simulations</label>
    <type>Checkbox</type>
</CustomField>