unpackaged/main/default/objects/Partner__c/fields/Interactivity_varying_means__c.field-meta.xml
<CustomField>
    <fullName>Interactivity_varying_means__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interactivity varying means</label>
    <type>Checkbox</type>
</CustomField>