unpackaged/main/default/objects/Partner__c/fields/Landing_page__c.field-meta.xml
<CustomField>
    <fullName>Landing_page__c</fullName>
    <label>Landing_page</label>
    <type>Url</type>
</CustomField>