unpackaged/main/default/objects/Partner__c/fields/Lead_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Sharing</label>
    <type>Checkbox</type>
</CustomField>