unpackaged/main/default/objects/Partner__c/fields/LMS_analytics__c.field-meta.xml
<CustomField>
    <fullName>LMS_analytics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LMS analytics</label>
    <type>Checkbox</type>
</CustomField>