unpackaged/main/default/objects/Partner__c/fields/LMS_sends_grades__c.field-meta.xml
<CustomField>
    <fullName>LMS_sends_grades__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LMS sends grades</label>
    <type>Checkbox</type>
</CustomField>