unpackaged/main/default/objects/Partner__c/fields/LMS_SSO__c.field-meta.xml
<CustomField>
    <fullName>LMS_SSO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LMS SSO</label>
    <type>Checkbox</type>
</CustomField>