unpackaged/main/default/objects/Partner__c/fields/Measure_alternate_assessment__c.field-meta.xml
<CustomField>
    <fullName>Measure_alternate_assessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Measure alternate assessment</label>
    <type>Checkbox</type>
</CustomField>