unpackaged/main/default/objects/Partner__c/fields/Online_teaching_asynchronous__c.field-meta.xml
<CustomField>
    <fullName>Online_teaching_asynchronous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online teaching asynchronous</label>
    <type>Checkbox</type>
</CustomField>