unpackaged/main/default/objects/Partner__c/fields/Online_teaching_labs__c.field-meta.xml
<CustomField>
    <fullName>Online_teaching_labs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online teaching labs</label>
    <type>Checkbox</type>
</CustomField>