unpackaged/main/default/objects/Partner__c/fields/Online_teaching_lecture_streaming__c.field-meta.xml
<CustomField>
    <fullName>Online_teaching_lecture_streaming__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online teaching lecture streaming</label>
    <type>Checkbox</type>
</CustomField>