unpackaged/main/default/objects/Partner__c/fields/Online_teaching_peer_discussion__c.field-meta.xml
<CustomField>
    <fullName>Online_teaching_peer_discussion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online teaching peer discussion</label>
    <type>Checkbox</type>
</CustomField>