unpackaged/main/default/objects/Partner__c/fields/Partner_Parent__c.field-meta.xml
<CustomField>
    <fullName>Partner_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Parent</label>
    <referenceTo>Partner__c</referenceTo>
    <relationshipLabel>Partners</relationshipLabel>
    <relationshipName>Partners</relationshipName>
    <type>Lookup</type>
</CustomField>