unpackaged/main/default/objects/Partner__c/fields/Partner_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_Status__c</fullName>
    <label>Partner Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Past</fullName>
            </value>
            <value>
                <fullName>In Discussion</fullName>
            </value>
            <value>
                <fullName>Contract Review by Partner</fullName>
            </value>
            <value>
                <fullName>Contract Review by OpenStax</fullName>
            </value>
            <value>
                <fullName>Contract Review by Legal</fullName>
            </value>
            <value>
                <fullName>Not a Partner</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Current Partner</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>