unpackaged/main/default/objects/Partner__c/fields/Partnership_Level__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Level__c</fullName>
    <label>Partnership Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full partner</fullName>
            </value>
            <value>
                <fullName>Brand Ally</fullName>
            </value>
            <value>
                <fullName>Referral Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>