unpackaged/main/default/objects/Partner__c/fields/Reporting_student_workload__c.field-meta.xml
<CustomField>
    <fullName>Reporting_student_workload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reporting student workload</label>
    <type>Checkbox</type>
</CustomField>