unpackaged/main/default/objects/Partner__c/fields/Scaffolding_narrative__c.field-meta.xml
<CustomField>
    <fullName>Scaffolding_narrative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scaffolding narrative</label>
    <type>Checkbox</type>
</CustomField>