unpackaged/main/default/objects/Partner__c/fields/short_partner_description__c.field-meta.xml
<CustomField>
    <fullName>short_partner_description__c</fullName>
    <label>short partner description</label>
    <type>TextArea</type>
</CustomField>